// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InspectorControlsStylePanel matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="components-panel__body is-opened"
      >
        <h2
          class="components-panel__body-title"
        >
          <button
            aria-expanded="true"
            class="components-button components-panel__body-toggle"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="components-panel__arrow"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
                />
              </svg>
            </span>
            Style Settings
          </button>
        </h2>
        <div
          class="components-base-control components-radio-control css-wdf2ti-Wrapper e1puf3u3"
        >
          <div
            class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
          >
            <label
              class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
              for="inspector-radio-control-0"
            >
              Content layout
            </label>
            <div
              class="components-radio-control__option"
            >
              <input
                class="components-radio-control__input"
                id="inspector-radio-control-0-0"
                name="inspector-radio-control-0"
                type="radio"
                value="text-above-media"
              />
              <label
                for="inspector-radio-control-0-0"
              >
                Text above media
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                class="components-radio-control__input"
                id="inspector-radio-control-0-1"
                name="inspector-radio-control-0"
                type="radio"
                value="text-over-media"
              />
              <label
                for="inspector-radio-control-0-1"
              >
                Text over media
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                checked=""
                class="components-radio-control__input"
                id="inspector-radio-control-0-2"
                name="inspector-radio-control-0"
                type="radio"
                value="text-under-media"
              />
              <label
                for="inspector-radio-control-0-2"
              >
                Text under media
              </label>
            </div>
          </div>
        </div>
        <div
          class="components-base-control"
        >
          <label
            class="components-base-control__label"
            for="shape-size"
          >
            Corner Styles
          </label>
          <div>
            Overrides will only apply to these cards. Change Cards corner styles in 
            <a
              href="http://example.com/shape"
              rel="noreferrer noopener"
              target="_blank"
            >
              Material Design Options
            </a>
             to update all cards.
          </div>
          <div
            class="components-base-control components-global-shape-size"
          >
            <div
              class="components-base-control components-range-control css-wdf2ti-Wrapper e1puf3u3"
            >
              <div
                class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
              >
                <div
                  class="components-range-control__root css-2cg8er-Root exqw8y214"
                >
                  <div
                    class="components-range-control__wrapper css-2udiwk-Wrapper-wrapperColor-rangeHeight-wrapperMargin exqw8y213"
                    color="var( --wp-admin-theme-color, #00669b)"
                  >
                    <input
                      aria-hidden="false"
                      class="components-range-control__slider css-12dovbr-InputRange exqw8y23"
                      id="inspector-range-control-0"
                      max="20"
                      min="0"
                      step="1"
                      tabindex="0"
                      type="range"
                      value="4"
                    />
                    <span
                      aria-hidden="true"
                      class="css-43abdt-Rail-railBackgroundColor exqw8y210"
                    />
                    <span
                      aria-hidden="true"
                      class="components-range-control__track css-1d41935-Track-trackBackgroundColor exqw8y29"
                      style="width: 20%;"
                    />
                    <span
                      class="css-11060oh-ThumbWrapper-thumbColor exqw8y25"
                      style="left: 20%;"
                    >
                      <span
                        aria-hidden="true"
                        class="css-yd4y8u-Thumb-thumbColor exqw8y24"
                      />
                    </span>
                    <span
                      aria-hidden="false"
                      class="components-simple-tooltip components-range-control__tooltip css-1ct94j4-Tooltip-tooltipShow-tooltipPosition exqw8y22"
                      role="tooltip"
                      style="left: 20%; z-index: 100;"
                    >
                      4
                    </span>
                  </div>
                  <div
                    class="components-flex components-input-control components-number-control components-range-control__number exqw8y21 ep48uk90 em5sgkm7 css-ep9ym1-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles-Input-InputNumber-rangeHeight em57xhy0"
                    data-wp-c16t="true"
                    data-wp-component="Flex"
                  >
                    <div
                      class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                      data-wp-c16t="true"
                      data-wp-component="FlexItem"
                    />
                    <div
                      class="components-input-control__container css-1sy20aj-Container-containerDisabledStyles-containerMarginStyles-containerWidthStyles em5sgkm6"
                    >
                      <input
                        autocomplete="off"
                        class="components-input-control__input css-zq8abe-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                        id="inspector-input-control-0"
                        inputmode="decimal"
                        max="20"
                        min="0"
                        step="1"
                        type="number"
                        value="4"
                      />
                      <div
                        aria-hidden="true"
                        class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="components-button global-shape-size-reset is-small"
              type="button"
            >
              Reset
            </button>
          </div>
        </div>
        <div
          class="components-base-control components-radio-control css-wdf2ti-Wrapper e1puf3u3"
        >
          <div
            class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
          >
            <label
              class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
              for="inspector-radio-control-1"
            >
              Elevation style
            </label>
            <div
              class="components-radio-control__option"
            >
              <input
                aria-describedby="inspector-radio-control-1__help"
                class="components-radio-control__input"
                id="inspector-radio-control-1-0"
                name="inspector-radio-control-1"
                type="radio"
                value="global"
              />
              <label
                for="inspector-radio-control-1-0"
              >
                Inherit from Global Settings
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                aria-describedby="inspector-radio-control-1__help"
                class="components-radio-control__input"
                id="inspector-radio-control-1-1"
                name="inspector-radio-control-1"
                type="radio"
                value="elevated"
              />
              <label
                for="inspector-radio-control-1-1"
              >
                Elevated
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                aria-describedby="inspector-radio-control-1__help"
                class="components-radio-control__input"
                id="inspector-radio-control-1-2"
                name="inspector-radio-control-1"
                type="radio"
                value="outlined"
              />
              <label
                for="inspector-radio-control-1-2"
              >
                Outlined
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                aria-describedby="inspector-radio-control-1__help"
                class="components-radio-control__input"
                id="inspector-radio-control-1-3"
                name="inspector-radio-control-1"
                type="radio"
                value="filled"
              />
              <label
                for="inspector-radio-control-1-3"
              >
                Filled
              </label>
            </div>
          </div>
          <p
            class="components-base-control__help css-1gbp77-StyledHelp e1puf3u0"
            id="inspector-radio-control-1__help"
          >
            Elevation style whether elevated or outlined.
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="components-panel__body is-opened"
    >
      <h2
        class="components-panel__body-title"
      >
        <button
          aria-expanded="true"
          class="components-button components-panel__body-toggle"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="components-panel__arrow"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
              />
            </svg>
          </span>
          Style Settings
        </button>
      </h2>
      <div
        class="components-base-control components-radio-control css-wdf2ti-Wrapper e1puf3u3"
      >
        <div
          class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
        >
          <label
            class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
            for="inspector-radio-control-0"
          >
            Content layout
          </label>
          <div
            class="components-radio-control__option"
          >
            <input
              class="components-radio-control__input"
              id="inspector-radio-control-0-0"
              name="inspector-radio-control-0"
              type="radio"
              value="text-above-media"
            />
            <label
              for="inspector-radio-control-0-0"
            >
              Text above media
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              class="components-radio-control__input"
              id="inspector-radio-control-0-1"
              name="inspector-radio-control-0"
              type="radio"
              value="text-over-media"
            />
            <label
              for="inspector-radio-control-0-1"
            >
              Text over media
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              checked=""
              class="components-radio-control__input"
              id="inspector-radio-control-0-2"
              name="inspector-radio-control-0"
              type="radio"
              value="text-under-media"
            />
            <label
              for="inspector-radio-control-0-2"
            >
              Text under media
            </label>
          </div>
        </div>
      </div>
      <div
        class="components-base-control"
      >
        <label
          class="components-base-control__label"
          for="shape-size"
        >
          Corner Styles
        </label>
        <div>
          Overrides will only apply to these cards. Change Cards corner styles in 
          <a
            href="http://example.com/shape"
            rel="noreferrer noopener"
            target="_blank"
          >
            Material Design Options
          </a>
           to update all cards.
        </div>
        <div
          class="components-base-control components-global-shape-size"
        >
          <div
            class="components-base-control components-range-control css-wdf2ti-Wrapper e1puf3u3"
          >
            <div
              class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
            >
              <div
                class="components-range-control__root css-2cg8er-Root exqw8y214"
              >
                <div
                  class="components-range-control__wrapper css-2udiwk-Wrapper-wrapperColor-rangeHeight-wrapperMargin exqw8y213"
                  color="var( --wp-admin-theme-color, #00669b)"
                >
                  <input
                    aria-hidden="false"
                    class="components-range-control__slider css-12dovbr-InputRange exqw8y23"
                    id="inspector-range-control-0"
                    max="20"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="4"
                  />
                  <span
                    aria-hidden="true"
                    class="css-43abdt-Rail-railBackgroundColor exqw8y210"
                  />
                  <span
                    aria-hidden="true"
                    class="components-range-control__track css-1d41935-Track-trackBackgroundColor exqw8y29"
                    style="width: 20%;"
                  />
                  <span
                    class="css-11060oh-ThumbWrapper-thumbColor exqw8y25"
                    style="left: 20%;"
                  >
                    <span
                      aria-hidden="true"
                      class="css-yd4y8u-Thumb-thumbColor exqw8y24"
                    />
                  </span>
                  <span
                    aria-hidden="false"
                    class="components-simple-tooltip components-range-control__tooltip css-1ct94j4-Tooltip-tooltipShow-tooltipPosition exqw8y22"
                    role="tooltip"
                    style="left: 20%; z-index: 100;"
                  >
                    4
                  </span>
                </div>
                <div
                  class="components-flex components-input-control components-number-control components-range-control__number exqw8y21 ep48uk90 em5sgkm7 css-ep9ym1-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles-Input-InputNumber-rangeHeight em57xhy0"
                  data-wp-c16t="true"
                  data-wp-component="Flex"
                >
                  <div
                    class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                    data-wp-c16t="true"
                    data-wp-component="FlexItem"
                  />
                  <div
                    class="components-input-control__container css-1sy20aj-Container-containerDisabledStyles-containerMarginStyles-containerWidthStyles em5sgkm6"
                  >
                    <input
                      autocomplete="off"
                      class="components-input-control__input css-zq8abe-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                      id="inspector-input-control-0"
                      inputmode="decimal"
                      max="20"
                      min="0"
                      step="1"
                      type="number"
                      value="4"
                    />
                    <div
                      aria-hidden="true"
                      class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="components-button global-shape-size-reset is-small"
            type="button"
          >
            Reset
          </button>
        </div>
      </div>
      <div
        class="components-base-control components-radio-control css-wdf2ti-Wrapper e1puf3u3"
      >
        <div
          class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
        >
          <label
            class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
            for="inspector-radio-control-1"
          >
            Elevation style
          </label>
          <div
            class="components-radio-control__option"
          >
            <input
              aria-describedby="inspector-radio-control-1__help"
              class="components-radio-control__input"
              id="inspector-radio-control-1-0"
              name="inspector-radio-control-1"
              type="radio"
              value="global"
            />
            <label
              for="inspector-radio-control-1-0"
            >
              Inherit from Global Settings
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              aria-describedby="inspector-radio-control-1__help"
              class="components-radio-control__input"
              id="inspector-radio-control-1-1"
              name="inspector-radio-control-1"
              type="radio"
              value="elevated"
            />
            <label
              for="inspector-radio-control-1-1"
            >
              Elevated
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              aria-describedby="inspector-radio-control-1__help"
              class="components-radio-control__input"
              id="inspector-radio-control-1-2"
              name="inspector-radio-control-1"
              type="radio"
              value="outlined"
            />
            <label
              for="inspector-radio-control-1-2"
            >
              Outlined
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              aria-describedby="inspector-radio-control-1__help"
              class="components-radio-control__input"
              id="inspector-radio-control-1-3"
              name="inspector-radio-control-1"
              type="radio"
              value="filled"
            />
            <label
              for="inspector-radio-control-1-3"
            >
              Filled
            </label>
          </div>
        </div>
        <p
          class="components-base-control__help css-1gbp77-StyledHelp e1puf3u0"
          id="inspector-radio-control-1__help"
        >
          Elevation style whether elevated or outlined.
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`InspectorControlsStylePanel matches snapshot when it is not a single card 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="components-panel__body is-opened"
      >
        <h2
          class="components-panel__body-title"
        >
          <button
            aria-expanded="true"
            class="components-button components-panel__body-toggle"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="components-panel__arrow"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
                />
              </svg>
            </span>
            Card #1 Style Settings
          </button>
        </h2>
        <div
          class="components-base-control components-radio-control css-wdf2ti-Wrapper e1puf3u3"
        >
          <div
            class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
          >
            <label
              class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
              for="inspector-radio-control-4"
            >
              Content layout
            </label>
            <div
              class="components-radio-control__option"
            >
              <input
                class="components-radio-control__input"
                id="inspector-radio-control-4-0"
                name="inspector-radio-control-4"
                type="radio"
                value="text-above-media"
              />
              <label
                for="inspector-radio-control-4-0"
              >
                Text above media
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                class="components-radio-control__input"
                id="inspector-radio-control-4-1"
                name="inspector-radio-control-4"
                type="radio"
                value="text-over-media"
              />
              <label
                for="inspector-radio-control-4-1"
              >
                Text over media
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                checked=""
                class="components-radio-control__input"
                id="inspector-radio-control-4-2"
                name="inspector-radio-control-4"
                type="radio"
                value="text-under-media"
              />
              <label
                for="inspector-radio-control-4-2"
              >
                Text under media
              </label>
            </div>
          </div>
        </div>
        <div
          class="components-base-control"
        >
          <label
            class="components-base-control__label"
            for="shape-size"
          >
            Corner Styles
          </label>
          <div>
            Overrides will only apply to these cards. Change Cards corner styles in 
            <a
              href="http://example.com/shape"
              rel="noreferrer noopener"
              target="_blank"
            >
              Material Design Options
            </a>
             to update all cards.
          </div>
          <div
            class="components-base-control components-global-shape-size"
          >
            <div
              class="components-base-control components-range-control css-wdf2ti-Wrapper e1puf3u3"
            >
              <div
                class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
              >
                <div
                  class="components-range-control__root css-2cg8er-Root exqw8y214"
                >
                  <div
                    class="components-range-control__wrapper css-2udiwk-Wrapper-wrapperColor-rangeHeight-wrapperMargin exqw8y213"
                    color="var( --wp-admin-theme-color, #00669b)"
                  >
                    <input
                      aria-hidden="false"
                      class="components-range-control__slider css-12dovbr-InputRange exqw8y23"
                      id="inspector-range-control-2"
                      max="20"
                      min="0"
                      step="1"
                      tabindex="0"
                      type="range"
                      value="4"
                    />
                    <span
                      aria-hidden="true"
                      class="css-43abdt-Rail-railBackgroundColor exqw8y210"
                    />
                    <span
                      aria-hidden="true"
                      class="components-range-control__track css-1d41935-Track-trackBackgroundColor exqw8y29"
                      style="width: 20%;"
                    />
                    <span
                      class="css-11060oh-ThumbWrapper-thumbColor exqw8y25"
                      style="left: 20%;"
                    >
                      <span
                        aria-hidden="true"
                        class="css-yd4y8u-Thumb-thumbColor exqw8y24"
                      />
                    </span>
                    <span
                      aria-hidden="false"
                      class="components-simple-tooltip components-range-control__tooltip css-1ct94j4-Tooltip-tooltipShow-tooltipPosition exqw8y22"
                      role="tooltip"
                      style="left: 20%; z-index: 100;"
                    >
                      4
                    </span>
                  </div>
                  <div
                    class="components-flex components-input-control components-number-control components-range-control__number exqw8y21 ep48uk90 em5sgkm7 css-ep9ym1-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles-Input-InputNumber-rangeHeight em57xhy0"
                    data-wp-c16t="true"
                    data-wp-component="Flex"
                  >
                    <div
                      class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                      data-wp-c16t="true"
                      data-wp-component="FlexItem"
                    />
                    <div
                      class="components-input-control__container css-1sy20aj-Container-containerDisabledStyles-containerMarginStyles-containerWidthStyles em5sgkm6"
                    >
                      <input
                        autocomplete="off"
                        class="components-input-control__input css-zq8abe-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                        id="inspector-input-control-2"
                        inputmode="decimal"
                        max="20"
                        min="0"
                        step="1"
                        type="number"
                        value="4"
                      />
                      <div
                        aria-hidden="true"
                        class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="components-button global-shape-size-reset is-small"
              type="button"
            >
              Reset
            </button>
          </div>
        </div>
        <div
          class="components-base-control components-radio-control css-wdf2ti-Wrapper e1puf3u3"
        >
          <div
            class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
          >
            <label
              class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
              for="inspector-radio-control-5"
            >
              Elevation style
            </label>
            <div
              class="components-radio-control__option"
            >
              <input
                aria-describedby="inspector-radio-control-5__help"
                class="components-radio-control__input"
                id="inspector-radio-control-5-0"
                name="inspector-radio-control-5"
                type="radio"
                value="global"
              />
              <label
                for="inspector-radio-control-5-0"
              >
                Inherit from Global Settings
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                aria-describedby="inspector-radio-control-5__help"
                class="components-radio-control__input"
                id="inspector-radio-control-5-1"
                name="inspector-radio-control-5"
                type="radio"
                value="elevated"
              />
              <label
                for="inspector-radio-control-5-1"
              >
                Elevated
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                aria-describedby="inspector-radio-control-5__help"
                class="components-radio-control__input"
                id="inspector-radio-control-5-2"
                name="inspector-radio-control-5"
                type="radio"
                value="outlined"
              />
              <label
                for="inspector-radio-control-5-2"
              >
                Outlined
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                aria-describedby="inspector-radio-control-5__help"
                class="components-radio-control__input"
                id="inspector-radio-control-5-3"
                name="inspector-radio-control-5"
                type="radio"
                value="filled"
              />
              <label
                for="inspector-radio-control-5-3"
              >
                Filled
              </label>
            </div>
          </div>
          <p
            class="components-base-control__help css-1gbp77-StyledHelp e1puf3u0"
            id="inspector-radio-control-5__help"
          >
            Elevation style whether elevated or outlined.
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="components-panel__body is-opened"
    >
      <h2
        class="components-panel__body-title"
      >
        <button
          aria-expanded="true"
          class="components-button components-panel__body-toggle"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="components-panel__arrow"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
              />
            </svg>
          </span>
          Card #1 Style Settings
        </button>
      </h2>
      <div
        class="components-base-control components-radio-control css-wdf2ti-Wrapper e1puf3u3"
      >
        <div
          class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
        >
          <label
            class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
            for="inspector-radio-control-4"
          >
            Content layout
          </label>
          <div
            class="components-radio-control__option"
          >
            <input
              class="components-radio-control__input"
              id="inspector-radio-control-4-0"
              name="inspector-radio-control-4"
              type="radio"
              value="text-above-media"
            />
            <label
              for="inspector-radio-control-4-0"
            >
              Text above media
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              class="components-radio-control__input"
              id="inspector-radio-control-4-1"
              name="inspector-radio-control-4"
              type="radio"
              value="text-over-media"
            />
            <label
              for="inspector-radio-control-4-1"
            >
              Text over media
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              checked=""
              class="components-radio-control__input"
              id="inspector-radio-control-4-2"
              name="inspector-radio-control-4"
              type="radio"
              value="text-under-media"
            />
            <label
              for="inspector-radio-control-4-2"
            >
              Text under media
            </label>
          </div>
        </div>
      </div>
      <div
        class="components-base-control"
      >
        <label
          class="components-base-control__label"
          for="shape-size"
        >
          Corner Styles
        </label>
        <div>
          Overrides will only apply to these cards. Change Cards corner styles in 
          <a
            href="http://example.com/shape"
            rel="noreferrer noopener"
            target="_blank"
          >
            Material Design Options
          </a>
           to update all cards.
        </div>
        <div
          class="components-base-control components-global-shape-size"
        >
          <div
            class="components-base-control components-range-control css-wdf2ti-Wrapper e1puf3u3"
          >
            <div
              class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
            >
              <div
                class="components-range-control__root css-2cg8er-Root exqw8y214"
              >
                <div
                  class="components-range-control__wrapper css-2udiwk-Wrapper-wrapperColor-rangeHeight-wrapperMargin exqw8y213"
                  color="var( --wp-admin-theme-color, #00669b)"
                >
                  <input
                    aria-hidden="false"
                    class="components-range-control__slider css-12dovbr-InputRange exqw8y23"
                    id="inspector-range-control-2"
                    max="20"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="4"
                  />
                  <span
                    aria-hidden="true"
                    class="css-43abdt-Rail-railBackgroundColor exqw8y210"
                  />
                  <span
                    aria-hidden="true"
                    class="components-range-control__track css-1d41935-Track-trackBackgroundColor exqw8y29"
                    style="width: 20%;"
                  />
                  <span
                    class="css-11060oh-ThumbWrapper-thumbColor exqw8y25"
                    style="left: 20%;"
                  >
                    <span
                      aria-hidden="true"
                      class="css-yd4y8u-Thumb-thumbColor exqw8y24"
                    />
                  </span>
                  <span
                    aria-hidden="false"
                    class="components-simple-tooltip components-range-control__tooltip css-1ct94j4-Tooltip-tooltipShow-tooltipPosition exqw8y22"
                    role="tooltip"
                    style="left: 20%; z-index: 100;"
                  >
                    4
                  </span>
                </div>
                <div
                  class="components-flex components-input-control components-number-control components-range-control__number exqw8y21 ep48uk90 em5sgkm7 css-ep9ym1-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles-Input-InputNumber-rangeHeight em57xhy0"
                  data-wp-c16t="true"
                  data-wp-component="Flex"
                >
                  <div
                    class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                    data-wp-c16t="true"
                    data-wp-component="FlexItem"
                  />
                  <div
                    class="components-input-control__container css-1sy20aj-Container-containerDisabledStyles-containerMarginStyles-containerWidthStyles em5sgkm6"
                  >
                    <input
                      autocomplete="off"
                      class="components-input-control__input css-zq8abe-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                      id="inspector-input-control-2"
                      inputmode="decimal"
                      max="20"
                      min="0"
                      step="1"
                      type="number"
                      value="4"
                    />
                    <div
                      aria-hidden="true"
                      class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="components-button global-shape-size-reset is-small"
            type="button"
          >
            Reset
          </button>
        </div>
      </div>
      <div
        class="components-base-control components-radio-control css-wdf2ti-Wrapper e1puf3u3"
      >
        <div
          class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
        >
          <label
            class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
            for="inspector-radio-control-5"
          >
            Elevation style
          </label>
          <div
            class="components-radio-control__option"
          >
            <input
              aria-describedby="inspector-radio-control-5__help"
              class="components-radio-control__input"
              id="inspector-radio-control-5-0"
              name="inspector-radio-control-5"
              type="radio"
              value="global"
            />
            <label
              for="inspector-radio-control-5-0"
            >
              Inherit from Global Settings
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              aria-describedby="inspector-radio-control-5__help"
              class="components-radio-control__input"
              id="inspector-radio-control-5-1"
              name="inspector-radio-control-5"
              type="radio"
              value="elevated"
            />
            <label
              for="inspector-radio-control-5-1"
            >
              Elevated
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              aria-describedby="inspector-radio-control-5__help"
              class="components-radio-control__input"
              id="inspector-radio-control-5-2"
              name="inspector-radio-control-5"
              type="radio"
              value="outlined"
            />
            <label
              for="inspector-radio-control-5-2"
            >
              Outlined
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              aria-describedby="inspector-radio-control-5__help"
              class="components-radio-control__input"
              id="inspector-radio-control-5-3"
              name="inspector-radio-control-5"
              type="radio"
              value="filled"
            />
            <label
              for="inspector-radio-control-5-3"
            >
              Filled
            </label>
          </div>
        </div>
        <p
          class="components-base-control__help css-1gbp77-StyledHelp e1puf3u0"
          id="inspector-radio-control-5__help"
        >
          Elevation style whether elevated or outlined.
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`InspectorControlsStylePanel matches snapshot when props get defaults 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="components-panel__body is-opened"
      >
        <h2
          class="components-panel__body-title"
        >
          <button
            aria-expanded="true"
            class="components-button components-panel__body-toggle"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="components-panel__arrow"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
                />
              </svg>
            </span>
            Style Settings
          </button>
        </h2>
        <div
          class="components-base-control components-radio-control css-wdf2ti-Wrapper e1puf3u3"
        >
          <div
            class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
          >
            <label
              class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
              for="inspector-radio-control-2"
            >
              Content layout
            </label>
            <div
              class="components-radio-control__option"
            >
              <input
                class="components-radio-control__input"
                id="inspector-radio-control-2-0"
                name="inspector-radio-control-2"
                type="radio"
                value="text-above-media"
              />
              <label
                for="inspector-radio-control-2-0"
              >
                Text above media
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                class="components-radio-control__input"
                id="inspector-radio-control-2-1"
                name="inspector-radio-control-2"
                type="radio"
                value="text-over-media"
              />
              <label
                for="inspector-radio-control-2-1"
              >
                Text over media
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                checked=""
                class="components-radio-control__input"
                id="inspector-radio-control-2-2"
                name="inspector-radio-control-2"
                type="radio"
                value="text-under-media"
              />
              <label
                for="inspector-radio-control-2-2"
              >
                Text under media
              </label>
            </div>
          </div>
        </div>
        <div
          class="components-base-control"
        >
          <label
            class="components-base-control__label"
            for="shape-size"
          >
            Corner Styles
          </label>
          <div>
            Overrides will only apply to these cards. Change Cards corner styles in 
            <a
              href="http://example.com/shape"
              rel="noreferrer noopener"
              target="_blank"
            >
              Material Design Options
            </a>
             to update all cards.
          </div>
          <div
            class="components-base-control components-global-shape-size"
          >
            <div
              class="components-base-control components-range-control css-wdf2ti-Wrapper e1puf3u3"
            >
              <div
                class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
              >
                <div
                  class="components-range-control__root css-2cg8er-Root exqw8y214"
                >
                  <div
                    class="components-range-control__wrapper css-2udiwk-Wrapper-wrapperColor-rangeHeight-wrapperMargin exqw8y213"
                    color="var( --wp-admin-theme-color, #00669b)"
                  >
                    <input
                      aria-hidden="false"
                      class="components-range-control__slider css-12dovbr-InputRange exqw8y23"
                      id="inspector-range-control-1"
                      max="20"
                      min="0"
                      step="1"
                      tabindex="0"
                      type="range"
                      value="4"
                    />
                    <span
                      aria-hidden="true"
                      class="css-43abdt-Rail-railBackgroundColor exqw8y210"
                    />
                    <span
                      aria-hidden="true"
                      class="components-range-control__track css-1d41935-Track-trackBackgroundColor exqw8y29"
                      style="width: 20%;"
                    />
                    <span
                      class="css-11060oh-ThumbWrapper-thumbColor exqw8y25"
                      style="left: 20%;"
                    >
                      <span
                        aria-hidden="true"
                        class="css-yd4y8u-Thumb-thumbColor exqw8y24"
                      />
                    </span>
                    <span
                      aria-hidden="false"
                      class="components-simple-tooltip components-range-control__tooltip css-1ct94j4-Tooltip-tooltipShow-tooltipPosition exqw8y22"
                      role="tooltip"
                      style="left: 20%; z-index: 100;"
                    >
                      4
                    </span>
                  </div>
                  <div
                    class="components-flex components-input-control components-number-control components-range-control__number exqw8y21 ep48uk90 em5sgkm7 css-ep9ym1-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles-Input-InputNumber-rangeHeight em57xhy0"
                    data-wp-c16t="true"
                    data-wp-component="Flex"
                  >
                    <div
                      class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                      data-wp-c16t="true"
                      data-wp-component="FlexItem"
                    />
                    <div
                      class="components-input-control__container css-1sy20aj-Container-containerDisabledStyles-containerMarginStyles-containerWidthStyles em5sgkm6"
                    >
                      <input
                        autocomplete="off"
                        class="components-input-control__input css-zq8abe-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                        id="inspector-input-control-1"
                        inputmode="decimal"
                        max="20"
                        min="0"
                        step="1"
                        type="number"
                        value="4"
                      />
                      <div
                        aria-hidden="true"
                        class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="components-button global-shape-size-reset is-small"
              type="button"
            >
              Reset
            </button>
          </div>
        </div>
        <div
          class="components-base-control components-radio-control css-wdf2ti-Wrapper e1puf3u3"
        >
          <div
            class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
          >
            <label
              class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
              for="inspector-radio-control-3"
            >
              Elevation style
            </label>
            <div
              class="components-radio-control__option"
            >
              <input
                aria-describedby="inspector-radio-control-3__help"
                class="components-radio-control__input"
                id="inspector-radio-control-3-0"
                name="inspector-radio-control-3"
                type="radio"
                value="global"
              />
              <label
                for="inspector-radio-control-3-0"
              >
                Inherit from Global Settings
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                aria-describedby="inspector-radio-control-3__help"
                class="components-radio-control__input"
                id="inspector-radio-control-3-1"
                name="inspector-radio-control-3"
                type="radio"
                value="elevated"
              />
              <label
                for="inspector-radio-control-3-1"
              >
                Elevated
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                aria-describedby="inspector-radio-control-3__help"
                class="components-radio-control__input"
                id="inspector-radio-control-3-2"
                name="inspector-radio-control-3"
                type="radio"
                value="outlined"
              />
              <label
                for="inspector-radio-control-3-2"
              >
                Outlined
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                aria-describedby="inspector-radio-control-3__help"
                class="components-radio-control__input"
                id="inspector-radio-control-3-3"
                name="inspector-radio-control-3"
                type="radio"
                value="filled"
              />
              <label
                for="inspector-radio-control-3-3"
              >
                Filled
              </label>
            </div>
          </div>
          <p
            class="components-base-control__help css-1gbp77-StyledHelp e1puf3u0"
            id="inspector-radio-control-3__help"
          >
            Elevation style whether elevated or outlined.
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="components-panel__body is-opened"
    >
      <h2
        class="components-panel__body-title"
      >
        <button
          aria-expanded="true"
          class="components-button components-panel__body-toggle"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="components-panel__arrow"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
              />
            </svg>
          </span>
          Style Settings
        </button>
      </h2>
      <div
        class="components-base-control components-radio-control css-wdf2ti-Wrapper e1puf3u3"
      >
        <div
          class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
        >
          <label
            class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
            for="inspector-radio-control-2"
          >
            Content layout
          </label>
          <div
            class="components-radio-control__option"
          >
            <input
              class="components-radio-control__input"
              id="inspector-radio-control-2-0"
              name="inspector-radio-control-2"
              type="radio"
              value="text-above-media"
            />
            <label
              for="inspector-radio-control-2-0"
            >
              Text above media
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              class="components-radio-control__input"
              id="inspector-radio-control-2-1"
              name="inspector-radio-control-2"
              type="radio"
              value="text-over-media"
            />
            <label
              for="inspector-radio-control-2-1"
            >
              Text over media
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              checked=""
              class="components-radio-control__input"
              id="inspector-radio-control-2-2"
              name="inspector-radio-control-2"
              type="radio"
              value="text-under-media"
            />
            <label
              for="inspector-radio-control-2-2"
            >
              Text under media
            </label>
          </div>
        </div>
      </div>
      <div
        class="components-base-control"
      >
        <label
          class="components-base-control__label"
          for="shape-size"
        >
          Corner Styles
        </label>
        <div>
          Overrides will only apply to these cards. Change Cards corner styles in 
          <a
            href="http://example.com/shape"
            rel="noreferrer noopener"
            target="_blank"
          >
            Material Design Options
          </a>
           to update all cards.
        </div>
        <div
          class="components-base-control components-global-shape-size"
        >
          <div
            class="components-base-control components-range-control css-wdf2ti-Wrapper e1puf3u3"
          >
            <div
              class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
            >
              <div
                class="components-range-control__root css-2cg8er-Root exqw8y214"
              >
                <div
                  class="components-range-control__wrapper css-2udiwk-Wrapper-wrapperColor-rangeHeight-wrapperMargin exqw8y213"
                  color="var( --wp-admin-theme-color, #00669b)"
                >
                  <input
                    aria-hidden="false"
                    class="components-range-control__slider css-12dovbr-InputRange exqw8y23"
                    id="inspector-range-control-1"
                    max="20"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="4"
                  />
                  <span
                    aria-hidden="true"
                    class="css-43abdt-Rail-railBackgroundColor exqw8y210"
                  />
                  <span
                    aria-hidden="true"
                    class="components-range-control__track css-1d41935-Track-trackBackgroundColor exqw8y29"
                    style="width: 20%;"
                  />
                  <span
                    class="css-11060oh-ThumbWrapper-thumbColor exqw8y25"
                    style="left: 20%;"
                  >
                    <span
                      aria-hidden="true"
                      class="css-yd4y8u-Thumb-thumbColor exqw8y24"
                    />
                  </span>
                  <span
                    aria-hidden="false"
                    class="components-simple-tooltip components-range-control__tooltip css-1ct94j4-Tooltip-tooltipShow-tooltipPosition exqw8y22"
                    role="tooltip"
                    style="left: 20%; z-index: 100;"
                  >
                    4
                  </span>
                </div>
                <div
                  class="components-flex components-input-control components-number-control components-range-control__number exqw8y21 ep48uk90 em5sgkm7 css-ep9ym1-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles-Input-InputNumber-rangeHeight em57xhy0"
                  data-wp-c16t="true"
                  data-wp-component="Flex"
                >
                  <div
                    class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                    data-wp-c16t="true"
                    data-wp-component="FlexItem"
                  />
                  <div
                    class="components-input-control__container css-1sy20aj-Container-containerDisabledStyles-containerMarginStyles-containerWidthStyles em5sgkm6"
                  >
                    <input
                      autocomplete="off"
                      class="components-input-control__input css-zq8abe-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                      id="inspector-input-control-1"
                      inputmode="decimal"
                      max="20"
                      min="0"
                      step="1"
                      type="number"
                      value="4"
                    />
                    <div
                      aria-hidden="true"
                      class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="components-button global-shape-size-reset is-small"
            type="button"
          >
            Reset
          </button>
        </div>
      </div>
      <div
        class="components-base-control components-radio-control css-wdf2ti-Wrapper e1puf3u3"
      >
        <div
          class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
        >
          <label
            class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
            for="inspector-radio-control-3"
          >
            Elevation style
          </label>
          <div
            class="components-radio-control__option"
          >
            <input
              aria-describedby="inspector-radio-control-3__help"
              class="components-radio-control__input"
              id="inspector-radio-control-3-0"
              name="inspector-radio-control-3"
              type="radio"
              value="global"
            />
            <label
              for="inspector-radio-control-3-0"
            >
              Inherit from Global Settings
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              aria-describedby="inspector-radio-control-3__help"
              class="components-radio-control__input"
              id="inspector-radio-control-3-1"
              name="inspector-radio-control-3"
              type="radio"
              value="elevated"
            />
            <label
              for="inspector-radio-control-3-1"
            >
              Elevated
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              aria-describedby="inspector-radio-control-3__help"
              class="components-radio-control__input"
              id="inspector-radio-control-3-2"
              name="inspector-radio-control-3"
              type="radio"
              value="outlined"
            />
            <label
              for="inspector-radio-control-3-2"
            >
              Outlined
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              aria-describedby="inspector-radio-control-3__help"
              class="components-radio-control__input"
              id="inspector-radio-control-3-3"
              name="inspector-radio-control-3"
              type="radio"
              value="filled"
            />
            <label
              for="inspector-radio-control-3-3"
            >
              Filled
            </label>
          </div>
        </div>
        <p
          class="components-base-control__help css-1gbp77-StyledHelp e1puf3u0"
          id="inspector-radio-control-3__help"
        >
          Elevation style whether elevated or outlined.
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`InspectorControlsStylePanel matches snapshot when the card layout style is horizontal 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="components-panel__body is-opened"
      >
        <h2
          class="components-panel__body-title"
        >
          <button
            aria-expanded="true"
            class="components-button components-panel__body-toggle"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="components-panel__arrow"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
                />
              </svg>
            </span>
            Style Settings
          </button>
        </h2>
        <div
          class="components-base-control"
        >
          <label
            class="components-base-control__label"
            for="shape-size"
          >
            Corner Styles
          </label>
          <div>
            Overrides will only apply to these cards. Change Cards corner styles in 
            <a
              href="http://example.com/shape"
              rel="noreferrer noopener"
              target="_blank"
            >
              Material Design Options
            </a>
             to update all cards.
          </div>
          <div
            class="components-base-control components-global-shape-size"
          >
            <div
              class="components-base-control components-range-control css-wdf2ti-Wrapper e1puf3u3"
            >
              <div
                class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
              >
                <div
                  class="components-range-control__root css-2cg8er-Root exqw8y214"
                >
                  <div
                    class="components-range-control__wrapper css-2udiwk-Wrapper-wrapperColor-rangeHeight-wrapperMargin exqw8y213"
                    color="var( --wp-admin-theme-color, #00669b)"
                  >
                    <input
                      aria-hidden="false"
                      class="components-range-control__slider css-12dovbr-InputRange exqw8y23"
                      id="inspector-range-control-3"
                      max="20"
                      min="0"
                      step="1"
                      tabindex="0"
                      type="range"
                      value="4"
                    />
                    <span
                      aria-hidden="true"
                      class="css-43abdt-Rail-railBackgroundColor exqw8y210"
                    />
                    <span
                      aria-hidden="true"
                      class="components-range-control__track css-1d41935-Track-trackBackgroundColor exqw8y29"
                      style="width: 20%;"
                    />
                    <span
                      class="css-11060oh-ThumbWrapper-thumbColor exqw8y25"
                      style="left: 20%;"
                    >
                      <span
                        aria-hidden="true"
                        class="css-yd4y8u-Thumb-thumbColor exqw8y24"
                      />
                    </span>
                    <span
                      aria-hidden="false"
                      class="components-simple-tooltip components-range-control__tooltip css-1ct94j4-Tooltip-tooltipShow-tooltipPosition exqw8y22"
                      role="tooltip"
                      style="left: 20%; z-index: 100;"
                    >
                      4
                    </span>
                  </div>
                  <div
                    class="components-flex components-input-control components-number-control components-range-control__number exqw8y21 ep48uk90 em5sgkm7 css-ep9ym1-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles-Input-InputNumber-rangeHeight em57xhy0"
                    data-wp-c16t="true"
                    data-wp-component="Flex"
                  >
                    <div
                      class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                      data-wp-c16t="true"
                      data-wp-component="FlexItem"
                    />
                    <div
                      class="components-input-control__container css-1sy20aj-Container-containerDisabledStyles-containerMarginStyles-containerWidthStyles em5sgkm6"
                    >
                      <input
                        autocomplete="off"
                        class="components-input-control__input css-zq8abe-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                        id="inspector-input-control-3"
                        inputmode="decimal"
                        max="20"
                        min="0"
                        step="1"
                        type="number"
                        value="4"
                      />
                      <div
                        aria-hidden="true"
                        class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="components-button global-shape-size-reset is-small"
              type="button"
            >
              Reset
            </button>
          </div>
        </div>
        <div
          class="components-base-control components-radio-control css-wdf2ti-Wrapper e1puf3u3"
        >
          <div
            class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
          >
            <label
              class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
              for="inspector-radio-control-6"
            >
              Elevation style
            </label>
            <div
              class="components-radio-control__option"
            >
              <input
                aria-describedby="inspector-radio-control-6__help"
                class="components-radio-control__input"
                id="inspector-radio-control-6-0"
                name="inspector-radio-control-6"
                type="radio"
                value="global"
              />
              <label
                for="inspector-radio-control-6-0"
              >
                Inherit from Global Settings
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                aria-describedby="inspector-radio-control-6__help"
                class="components-radio-control__input"
                id="inspector-radio-control-6-1"
                name="inspector-radio-control-6"
                type="radio"
                value="elevated"
              />
              <label
                for="inspector-radio-control-6-1"
              >
                Elevated
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                aria-describedby="inspector-radio-control-6__help"
                class="components-radio-control__input"
                id="inspector-radio-control-6-2"
                name="inspector-radio-control-6"
                type="radio"
                value="outlined"
              />
              <label
                for="inspector-radio-control-6-2"
              >
                Outlined
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                aria-describedby="inspector-radio-control-6__help"
                class="components-radio-control__input"
                id="inspector-radio-control-6-3"
                name="inspector-radio-control-6"
                type="radio"
                value="filled"
              />
              <label
                for="inspector-radio-control-6-3"
              >
                Filled
              </label>
            </div>
          </div>
          <p
            class="components-base-control__help css-1gbp77-StyledHelp e1puf3u0"
            id="inspector-radio-control-6__help"
          >
            Elevation style whether elevated or outlined.
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="components-panel__body is-opened"
    >
      <h2
        class="components-panel__body-title"
      >
        <button
          aria-expanded="true"
          class="components-button components-panel__body-toggle"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="components-panel__arrow"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
              />
            </svg>
          </span>
          Style Settings
        </button>
      </h2>
      <div
        class="components-base-control"
      >
        <label
          class="components-base-control__label"
          for="shape-size"
        >
          Corner Styles
        </label>
        <div>
          Overrides will only apply to these cards. Change Cards corner styles in 
          <a
            href="http://example.com/shape"
            rel="noreferrer noopener"
            target="_blank"
          >
            Material Design Options
          </a>
           to update all cards.
        </div>
        <div
          class="components-base-control components-global-shape-size"
        >
          <div
            class="components-base-control components-range-control css-wdf2ti-Wrapper e1puf3u3"
          >
            <div
              class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
            >
              <div
                class="components-range-control__root css-2cg8er-Root exqw8y214"
              >
                <div
                  class="components-range-control__wrapper css-2udiwk-Wrapper-wrapperColor-rangeHeight-wrapperMargin exqw8y213"
                  color="var( --wp-admin-theme-color, #00669b)"
                >
                  <input
                    aria-hidden="false"
                    class="components-range-control__slider css-12dovbr-InputRange exqw8y23"
                    id="inspector-range-control-3"
                    max="20"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="4"
                  />
                  <span
                    aria-hidden="true"
                    class="css-43abdt-Rail-railBackgroundColor exqw8y210"
                  />
                  <span
                    aria-hidden="true"
                    class="components-range-control__track css-1d41935-Track-trackBackgroundColor exqw8y29"
                    style="width: 20%;"
                  />
                  <span
                    class="css-11060oh-ThumbWrapper-thumbColor exqw8y25"
                    style="left: 20%;"
                  >
                    <span
                      aria-hidden="true"
                      class="css-yd4y8u-Thumb-thumbColor exqw8y24"
                    />
                  </span>
                  <span
                    aria-hidden="false"
                    class="components-simple-tooltip components-range-control__tooltip css-1ct94j4-Tooltip-tooltipShow-tooltipPosition exqw8y22"
                    role="tooltip"
                    style="left: 20%; z-index: 100;"
                  >
                    4
                  </span>
                </div>
                <div
                  class="components-flex components-input-control components-number-control components-range-control__number exqw8y21 ep48uk90 em5sgkm7 css-ep9ym1-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles-Input-InputNumber-rangeHeight em57xhy0"
                  data-wp-c16t="true"
                  data-wp-component="Flex"
                >
                  <div
                    class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                    data-wp-c16t="true"
                    data-wp-component="FlexItem"
                  />
                  <div
                    class="components-input-control__container css-1sy20aj-Container-containerDisabledStyles-containerMarginStyles-containerWidthStyles em5sgkm6"
                  >
                    <input
                      autocomplete="off"
                      class="components-input-control__input css-zq8abe-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                      id="inspector-input-control-3"
                      inputmode="decimal"
                      max="20"
                      min="0"
                      step="1"
                      type="number"
                      value="4"
                    />
                    <div
                      aria-hidden="true"
                      class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="components-button global-shape-size-reset is-small"
            type="button"
          >
            Reset
          </button>
        </div>
      </div>
      <div
        class="components-base-control components-radio-control css-wdf2ti-Wrapper e1puf3u3"
      >
        <div
          class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
        >
          <label
            class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
            for="inspector-radio-control-6"
          >
            Elevation style
          </label>
          <div
            class="components-radio-control__option"
          >
            <input
              aria-describedby="inspector-radio-control-6__help"
              class="components-radio-control__input"
              id="inspector-radio-control-6-0"
              name="inspector-radio-control-6"
              type="radio"
              value="global"
            />
            <label
              for="inspector-radio-control-6-0"
            >
              Inherit from Global Settings
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              aria-describedby="inspector-radio-control-6__help"
              class="components-radio-control__input"
              id="inspector-radio-control-6-1"
              name="inspector-radio-control-6"
              type="radio"
              value="elevated"
            />
            <label
              for="inspector-radio-control-6-1"
            >
              Elevated
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              aria-describedby="inspector-radio-control-6__help"
              class="components-radio-control__input"
              id="inspector-radio-control-6-2"
              name="inspector-radio-control-6"
              type="radio"
              value="outlined"
            />
            <label
              for="inspector-radio-control-6-2"
            >
              Outlined
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              aria-describedby="inspector-radio-control-6__help"
              class="components-radio-control__input"
              id="inspector-radio-control-6-3"
              name="inspector-radio-control-6"
              type="radio"
              value="filled"
            />
            <label
              for="inspector-radio-control-6-3"
            >
              Filled
            </label>
          </div>
        </div>
        <p
          class="components-base-control__help css-1gbp77-StyledHelp e1puf3u0"
          id="inspector-radio-control-6__help"
        >
          Elevation style whether elevated or outlined.
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
